--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/express": "^5.0.3",
-    "express": "^5.1.0",
+    "@apollo/server": "^4.9.5",
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.2",
+    "express": "^4.18.2",
+    "graphql": "^16.8.1",
     "pg": "^8.16.3",
-    "pg-types": "^4.1.0"
+    "pg-types": "^4.1.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/pg": "^8.15.5",
     "jest": "^30.1.3",
